[package]
name = "runtime_units"
version = "0.5.0"
edition = "2021"
license = "MIT"
keywords =  ["units", "measurement", "SI", "dimensional-analysis"]
description = "A run-time Rust library for working with units of measurement and conversions between them."
repository = "https://github.com/mattrjackson/runtime_units_rs"
readme = "README.md"
authors = ["Matt Jackson <mattrjackson@gmail.com>"]

[dependencies]
bitfield-struct = "0.6.2"
cfg_eval = { version = "0.1.2", optional = true }
paste = "1.0.15"
serde = {version = "1.0.217", optional = true, features=["derive"] }
serde_json = { version = "1.0.134", optional = true }
serde_with = { version = "3.12.0", optional =  true }
utoipa = { version = "5.3.0", optional = true , features=["axum_extras", "uuid","chrono", "url", "time", "openapi_extensions", "debug"]}

[profile.test]
opt-level = 3
debug = true


[features]
default = ["std", "Dimensionless", "Length", "Mass", "Angle", "Luminance", "TemperatureInterval", "AmountOfSubstance", "ElectricCurrent", "Time"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with", "dep:cfg_eval"]
std = []
utoipa = ["dep:utoipa", "std"]
All = ["Absement","AbsorbedDose","Acceleration","Action","AmountOfSubstance","Angle","AngularAcceleration","AngularJerk","AngularVelocity","ArealDensityOfStates",
        "ArealMassDensity","ArealNumberDensity","ArealNumberRate","Area","SpecificEnergy","Capacitance","CatalyticActivityConcentration","CatalyticActivity","Curvature",
        "DiffusionCoefficient", "Dimensionless", "DoseEquivalent","DynamicViscosity","ElectricalConductance","ElectricalConductivity","ElectricalMobility","ElectricalResistance",
        "ElectricalResistivity","ElectricChargeArealDensity","ElectricChargeLinearDensity","ElectricCharge","ElectricChargeVolumetricDensity","ElectricCurrentDensity",
        "ElectricCurrent","ElectricDipoleMoment","ElectricDisplacementField","ElectricField","ElectricFlux","ElectricPermittivity","ElectricPotential","ElectricQuadrupoleMoment",
        "Energy","Force","FrequencyDrift","Frequency","HeatCapacity","HeatFluxDensity","HeatTransfer","Inductance","InformationRate","Information","Jerk","Length",
        "LinearDensityOfStates","LinearMassDensity","LinearNumberDensity","LinearNumberRate","LinearPowerDensity","Luminance","LuminousIntensity","MagneticFieldStrength",
        "MagneticFluxDensity","MagneticFlux","MagneticMoment","MagneticPermeability","MassConcentration","MassDensity","MassFlux","MassRate","Mass","Molality","MolarConcentration",
        "MolarEnergy","MolarFlux","MolarHeatCapacity","MolarMass","MolarRadioactivity","MolarVolume","MomentOfInertia","Momentum","Power","PressureImpulse","Pressure",
        "RadiantExposure","Radioactivity","Ratio","ReciprocalLength","SolidAngle","SpecificArea","SpecificHeatCapacity","SpecificRadioactivity","SpecificVolume",
        "SurfaceElectricCurrentDensity","TemperatureCoefficient","TemperatureGradient","TemperatureInterval","ThermalConductivity","ThermodynamicTemperature","Time",
        "Torque","Velocity","VolumeRate","Volume","VolumetricDensityOfStates","VolumetricHeatCapacity","VolumetricNumberDensity","VolumetricNumberRate","VolumetricPowerDensity"]
Absement=["Length", "Time"]
AbsorbedDose=["Length", "Time"]
Acceleration=["Length", "Time"]
Action=["Energy"]
AmountOfSubstance=[]
Angle=[]
AngularAcceleration=["Angle", "Time"]
AngularJerk=["Angle", "Time"]
AngularVelocity=["Angle", "Time"]
ArealDensityOfStates=["Mass", "Energy", "Length", "Time"]
ArealMassDensity=["Mass", "Length"]
ArealNumberDensity=["Length", "Area"]
ArealNumberRate=["Length", "Area", "Time"]
Area=["Length"]
Capacitance=["Length", "Mass", "ElectricCurrent", "ElectricPotential", "Time"]
CatalyticActivityConcentration=["AmountOfSubstance", "Time", "Length", "Volume", "CatalyticActivity"]
CatalyticActivity=["AmountOfSubstance", "Time"]
Curvature=["Angle", "Length"]
DiffusionCoefficient=["Length", "Time", "Area"]
Dimensionless=[]
DoseEquivalent=[]
DynamicViscosity=["Pressure", "Time"]
ElectricalConductance=[]
ElectricalConductivity=[]
ElectricalMobility=[]
ElectricalResistance=[]
ElectricalResistivity=[]
ElectricChargeArealDensity=["ElectricCharge", "Area", "Length", "ElectricCurrent"]
ElectricChargeLinearDensity=["ElectricCharge", "Length", "ElectricCurrent"]
ElectricCharge=["ElectricCurrent", "Time"]
ElectricChargeVolumetricDensity=["ElectricCharge", "Volume", "Length", "ElectricCurrent"]
ElectricCurrentDensity=["Area", "Length", "ElectricCurrent"]
ElectricCurrent=[]
ElectricDipoleMoment=["ElectricCharge", "Length"]
ElectricDisplacementField=["ElectricCharge", "Area" , "Length"]
ElectricField=["Length", "Energy", "ElectricCharge", "ElectricPotential"]
ElectricFlux=["Length", "ElectricPotential"]
ElectricPermittivity=["Capacitance", "Length"]
ElectricPotential=["Length", "Mass", "ElectricCurrent", "Time"]
ElectricQuadrupoleMoment=["ElectricCharge", "Length", "Area"]
Energy=[]
Force=[]
FrequencyDrift=[]
Frequency=[]
HeatCapacity=[]
HeatFluxDensity=[]
HeatTransfer=[]
Inductance=[]
InformationRate=[]
Information=[]
Jerk=[]
Length=[]
LinearDensityOfStates=[]
LinearMassDensity=[]
LinearNumberDensity=[]
LinearNumberRate=[]
LinearPowerDensity=[]
Luminance=[]
LuminousIntensity=[]
MagneticFieldStrength=[]
MagneticFluxDensity=[]
MagneticFlux=[]
MagneticMoment=[]
MagneticPermeability=[]
MassConcentration=[]
MassDensity=[]
MassFlux=[]
MassRate=[]
Mass=[]
Molality=[]
MolarConcentration=[]
MolarEnergy=[]
MolarFlux=[]
MolarHeatCapacity=[]
MolarMass=[]
MolarRadioactivity=[]
MolarVolume=[]
MomentOfInertia=[]
Momentum=[]
Power=[]
PressureImpulse=[]
Pressure=[]
RadiantExposure=[]
Radioactivity=[]
Ratio=[]
ReciprocalLength=[]
SolidAngle=[]
SpecificArea=[]
SpecificEnergy=["Length", "Time", "Energy", "Mass"]
SpecificHeatCapacity=[]
SpecificRadioactivity=[]
SpecificVolume=[]
SurfaceElectricCurrentDensity=[]
TemperatureCoefficient=[]
TemperatureGradient=[]
TemperatureInterval=[]
ThermalConductivity=[]
ThermodynamicTemperature=[]
Time=[]
Torque=[]
Velocity=[]
VolumeRate=[]
Volume=[]
VolumetricDensityOfStates=[]
VolumetricHeatCapacity=[]
VolumetricNumberDensity=[]
VolumetricNumberRate=[]
VolumetricPowerDensity=[]
